--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Herudi",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "express-validator": "^6.9.2"
